# ripper

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Readme.md  info  parsed.json  rustfmt.toml  todo.md
libs/servarr-clients/: Cargo.toml
libs/servarr-clients/src/: client.rs  lib.rs  models.rs
libs/servarr-clients/src/jellyfin/: client.rs  mod.rs
libs/servarr-clients/src/radarr/: client.rs  mod.rs  models.rs
libs/servarr-clients/src/sonarr/: client.rs  mod.rs  models.rs
services/autoripper/: Cargo.toml  config.example.json  parsed.json
services/autoripper/deployment/: autorip.service
services/autoripper/frontend/: .eslintrc.cjs  .prettierrc.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
services/autoripper/frontend/src/: app.tsx  main.tsx  vite-env.d.ts
services/autoripper/frontend/src/components/common/: RadialProgressBar.tsx
services/autoripper/frontend/src/hooks/: useArray.ts  useDebounce.ts  useDebouncedState.ts  useDynamicTranslation.ts  useTimeoutFn.ts
services/autoripper/frontend/src/lib/: compose-refs.ts  utils.ts
services/autoripper/frontend/src/services/: endpoints.ts  fetcher.ts
services/autoripper/frontend/src/styles/: globals.css
services/autoripper/requests/: bruno.json
services/autoripper/requests/Handbrake/: Encoding Presets.bru
services/autoripper/requests/MakeMKV/: Devices.bru  Movie Titles.bru  TV Show Titles.bru
services/autoripper/requests/Media Management/: Quality Profiles.bru  Root Folders.bru
services/autoripper/requests/Media Management/Jellyfin/: Library Scan.bru
services/autoripper/requests/Media Management/Radarr/: Command Status.bru  Create Movie.bru  Rename Files.bru  Upsert Tag.bru
services/autoripper/requests/Media Management/Sonarr/: Command Status.bru  Create TV Show.bru  Get TV Show.bru  Rename Files.bru  Upsert Tag.bru
services/autoripper/requests/Metadata/: Movie.bru  Search Movie.bru  Search TV Show.bru  TV Show.bru
services/autoripper/requests/Radarr/: Command Status.bru  Create Movie.bru  Movie Files.bru  Movie.bru  Quality Profiles.bru  Rename Movie.bru  Rootfolder.bru  Scan Movie.bru  TMDB Lookup.bru  Upsert Tag.bru
services/autoripper/requests/environments/: DEV.bru
services/autoripper/src/: error.rs  handler.rs  handlerd.rs  main.rs
services/autoripper/src/handler/: disc_handler.rs  handbrake_handler.rs  makemkv_handler.rs  media_handler.rs  metadata_handler.rs  mod.rs  ripping_handler.rs
(+183 files in other folders)
