[package]
name = "servarr-clients"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = {version = "1.0.202", features = ["derive"]}
tokio = { version = "1.37.0", features = ["time"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
tracing = "0.1.40"
