[package]
name = "ripper"
version = "0.1.0"
edition = "2021"

[dependencies]
makemkv-core = { workspace = true }
tmdb-client = { workspace = true }

serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
